FixedLayout: raised z-index (2 => 3)

--- a/src/components/FixedLayout/FixedLayout.css
+++ b/src/components/FixedLayout/FixedLayout.css
@@ -2,7 +2,7 @@
   position: fixed;
   box-sizing: border-box;
   left: 0;
-  z-index: 2;
+  z-index: 3;
   }
 
 .FixedLayout--top {
